# libv4l2

./: .gitignore  CMakeLists.txt  README.md
example/: Makefile  example.c
include/: libv4l2.h  v_error.h  v_utils.h
include/api/: error.h  image.h  info.h  loopback.h  v4l2.h
include/internal/: error.h  grab.h  image.h  internal.h  loopback.h  mmap.h  utils.h
include/v4l2_lib/: v_error.h  v_grab.h  v_image.h  v_info.h  v_internal.h  v_loopback.h  v_mmap.h  v_utils.h  v_v4l2.h
misc/: libv4l2.sym
src/: Makefile  error.c  grab.c  image.c  info.c  libv4l2.sym  loopback.c  mmap.c  utils.c  v4l2.c
